video comparing final version

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ table.choiceTable td {
 	
 	<!-- <div id="loading">Loading image...</div> --!>
 
-	<div id="main_media" class="top" style="visibility:hidden; overflow:auto;">
+	<div id="main_media" class="top" style="overflow:auto;">
 
 		<div id="anno_region"></div>
 
