--- a/instruction.html
+++ b/instruction.html
@@ -22,7 +22,7 @@
 	    <p>
 	      You will be shown two short video clips and a keyword. <br>
 			The task is to: <br><b>(1) watch the two videos <br>
-			(2) imaging you are searching videos based on the keyword, determine which video is preferred.
+			(2) imagine you are searching videos based on the keyword, determine which video is more relevant to the keyword.
 			</br><br>
 	    </p>
       </td></tr> 
